--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:theme="@style/Theme.MediSync">
         </activity>
         <activity
+            android:name=".PillDispenser"
+            android:exported="true"
+            android:theme="@style/Theme.MediSync">
+        </activity>
+        <activity
             android:name=".Dashboard"
             android:exported="true"
             android:theme="@style/Theme.MediSync">
