--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,16 @@
             android:theme="@style/Theme.MediSync">
         </activity>
         <activity
+            android:name=".MedMinder"
+            android:exported="true"
+            android:theme="@style/Theme.MediSync">
+        </activity>
+        <activity
+            android:name=".MDAlert"
+            android:exported="true"
+            android:theme="@style/Theme.MediSync">
+        </activity>
+        <activity
             android:name=".Dashboard"
             android:exported="true"
             android:theme="@style/Theme.MediSync">
