--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SET_ALARM"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,10 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediSync"
         tools:targetApi="31">
+
         <activity
             android:name=".GetStartedActivity"
             android:exported="true"
             android:theme="@style/Theme.MediSync">
+
         </activity>
         <activity
             android:name=".RegisterUserActivity"
@@ -32,6 +37,7 @@
             android:exported="true"
             android:theme="@style/Theme.MediSync">
         </activity>
+        <receiver android:name=".AlarmReceiver" />
         <activity
             android:name=".MDAlert"
             android:exported="true"
@@ -41,12 +47,13 @@
             android:name=".Dashboard"
             android:exported="true"
             android:theme="@style/Theme.MediSync">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+</intent-filter>
         </activity>
+
     </application>
 
 </manifest>
